# GeminiSensei

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cspell.json  eslint.config.js  index.html  package.json  vitest.config.ts
.husky/: pre-commit
docs/: ARCHITECTURE.md
scripts/: build-sidecar.sh  setup-dev-sidecar.cjs  validate.sh
sidecar/: README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  test_full_flow.sh
sidecar/agents/: agent_registry.py  base.py  command_detector.py  manager.py  prompt_templates.py  prompts.py  roadmap_creator.py
sidecar/agents/code_reviewer/: agent.py  state.py
sidecar/agents/code_reviewer/nodes/: __init__.py  analysis.py  enrichment.py  guardrails.py  socratic.py
sidecar/agents/orchestrator/: agent.py  state.py
sidecar/agents/orchestrator/nodes/: command_parser.py  delegation_executor.py  delegation_router.py
sidecar/agents/teacher/: agent.py  manager.py  state.py
sidecar/agents/teacher/nodes/: __init__.py  context.py  guardrails.py  socratic.py
sidecar/core/: config.py  exceptions.py  types.py
sidecar/database/: migrations.py  models.py  session.py
sidecar/migrations/: env.py
sidecar/migrations/versions/: b68bcc5d992e_initial_schema.py  cc1cb51cd170_add_code_review_models.py
sidecar/resources/: agents.json
sidecar/routers/: agents.py  app_settings.py  chat.py  review.py  roadmap.py
sidecar/schemas/: domain.py  lesson.py  models.py
sidecar/scripts/: generate_openapi.py
sidecar/services/: gemini_service.py  key_manager.py  lesson_service.py  review_service.py
sidecar/tests/: conftest.py  test_main_utils.py  test_manager.py  test_server_init.py
sidecar/tests/agents/: test_command_detector.py  test_delegation_executor.py  test_orchestrator.py  test_registry.py  test_reviewer_agent.py  test_reviewer_nodes.py  test_roadmap_creator.py  test_teacher_agent.py  test_teacher_nodes.py
sidecar/tests/api/: test_agents.py  test_chat.py  test_chat_routing.py  test_cors.py  test_errors.py  test_main.py  test_review.py  test_roadmap.py  test_settings.py
sidecar/tests/integration/: test_config_persistence.py  test_migrations.py  test_models.py  test_reset.py  test_review_fix.py  test_roadmap_persistence.py  test_settings_integration.py
sidecar/tests/unit/: test_exception_handlers.py  test_gemini_service.py  test_gemini_service_update.py  test_infra.py  test_lesson_service.py  test_manager_advanced.py  test_manager_metadata.py  test_review_service.py  test_schemas.py
(+43 files in other folders)
