[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "lancedb>=0.26.1",
    "langgraph>=1.0.5",
    "pydantic-ai>=1.39.0",
    "pyinstaller>=6.17.0",
    "sqlalchemy>=2.0.45",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
