[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "greenlet>=3.3.0",
    "lancedb>=0.26.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic-ai>=1.39.0",
    "pyinstaller>=6.17.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.40.0",
]
	
[tool.basedpyright]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "tests", extraPaths = ["."], reportAny = "none", reportExplicitAny = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none" },
  { root = "." }
]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
